# widget_for_bank

./: .gitignore  README.md  main.py  operation.py  pyproject.toml  utils.py
src/: main.py  utils.py
tests/: test_operation.py  test_utils.py
