[tool.poetry]
name = "widget-for-bank"
version = "0.1.0"
description = ""
authors = ["miroshnikoff <taxi83080@gmail.com>"]
readme = "README.md"
packages = [{include = "widget_for_bank"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
