[tool.poetry]
name = "widget-for-bank"
version = "0.1.0"
description = ""
authors = ["miroshnikoff <taxi83080@gmail.com>"]
readme = "README.md"
packages = [{include = "widget_for_bank"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
